changes path in index file

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="folio">
-  <link rel="apple-touch-icon" href="icons/web_icon_192.png">
+  <link rel="apple-touch-icon" href="/web/icons/web_icon_192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="icons/web_icon_512.png" />
+  <link rel="icon" type="image/png" href="/web/icons/web_icon_512.png" />
 
   <title>La Pyae</title>
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="/web/manifest.json">
 
   <style>
     .lds-ripple {
@@ -106,7 +106,7 @@
       });
     }
   </script>
-  <script src="main.dart.js" type="application/javascript"></script>
+  <script src="/web/main.dart.js" type="application/javascript"></script>
 </body>
 
 </html>
