--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     Fore more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
-  <base href="/web">
+  <base href="web/">
   
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -25,10 +25,10 @@
   <link rel="apple-touch-icon" href="/web/icons/web_icon_192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="/web/icons/web_icon_512.png" />
+  <link rel="icon" type="image/png" href="web/icons/web_icon_512.png" />
 
   <title>La Pyae</title>
-  <link rel="manifest" href="/web/manifest.json">
+  <link rel="manifest" href="web/manifest.json">
 
   <style>
     .lds-ripple {
@@ -106,7 +106,7 @@
       });
     }
   </script>
-  <script src="/web/main.dart.js" type="application/javascript"></script>
+  <script src="web/main.dart.js" type="application/javascript"></script>
 </body>
 
 </html>
