--- a/web/index.html
+++ b/web/index.html
@@ -25,7 +25,7 @@
   <link rel="apple-touch-icon" href="icons/web_icon_192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="icons/web_icon_512.png" />
+  <link rel="icon" type="image/png" href="favicon_16.png" />
 
   <title>La Pyae</title>
   <link rel="manifest" href="manifest.json">
